--- a/index.html
+++ b/index.html
@@ -3,6 +3,15 @@
     <head>
         <meta charset="utf-8">
         <title>Etch A Sketch</title>
-        <link type="stylesheet" src="./css/styles.css">
+        <link rel="stylesheet" href="./css/styles.css">
+        <script src="./js/script.js" defer></script>
     </head>
+    <body>
+        <div class="body">
+            <div class="header"><h1>Etch-A-Sketch</h1></div>
+            <div class="grid">
+                
+            </div>
+        </div>
+    </body>
 </html>
