grid works now with drag

--- a/index.html
+++ b/index.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta charset="utf-8">
+        <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
         <title>Etch A Sketch</title>
         <link rel="stylesheet" href="./css/styles.css">
         <script src="./js/script.js" defer></script>
     </head>
     <body>
+        <div class="header"><h1>Etch-A-Sketch</h1></div>
         <div class="body">
-            <div class="header"><h1>Etch-A-Sketch</h1></div>
+            <button id="colorSelector">Color</button>
+            <button id="erase">Erase</button>
             <div class="grid">
-                
             </div>
         </div>
+        <div class="footer">The Odin Project</div>
     </body>
 </html>
