--- a/index.html
+++ b/index.html
@@ -8,12 +8,21 @@
     </head>
     <body>
         <div class="header"><h1>Etch-A-Sketch</h1></div>
+
         <div class="body">
             <button id="colorSelector">Color</button>
             <button id="erase">Erase</button>
-            <div class="grid">
-            </div>
+            <div class="grid"></div>
+            <button id="colorSelector">Color</button>
+            <button id="erase">Erase</button>
         </div>
+
+        <div class="slidecontainer">
+            <h2>Size of Grid</h2>
+            <input type="range" min="1" max="101" value="50" step="10" class="slider" id="myRange">
+        </div>
+
+
         <div class="footer">The Odin Project</div>
     </body>
 </html>
