--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
         <div class="body">
             <button id="colorSelector">Color</button>
+            <input type="color" id="colorPicker" value="#000000">
             <button id="erase">Erase</button>
             <div class="grid"></div>
             <button id="colorSelector">Color</button>
@@ -19,7 +20,7 @@
 
         <div class="slidecontainer">
             <h2>Size of Grid</h2>
-            <input type="range" min="1" max="4" value="1" step="1" class="slider" id="myRange">
+            <input type="range" min="1" max="3" value="1" step="1" class="slider" id="myRange">
         </div>
 
 
