shadows, icons and font styling

--- a/index.html
+++ b/index.html
@@ -13,10 +13,17 @@
         <div class="body">
             <div class="content">
                 <div class="controls">
-                    <button id="erase">Erase</button>
-                    <div class="colorSelector">
-                        <input type="color" id="colorPicker" value="#000000">
+                    <div class="erase">
+                        <div id="eraser"></div>
+                        <p id="eraserLabel">Eraser</p>
                     </div>
+                    <div class="colorBundle">
+                        <div class="colorSelector">
+                            <input type="color" id="colorPicker" value="#000000">
+                        </div>
+                        <p id="colorLabel">Color</p>
+                    </div>
+
                 </div>
                 <div class="grid"></div>
             </div>
