--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <h2>Pixel Size</h2>
             <input type="range" min="1" max="3" value="1" step="1" class="slider" id="myRange">
             <div class="sliderLabel">
-                <p>Regular</p> <p>Small</p> <p>Tiny</p>
+                <p>Medium</p> <p>Small</p> <p>Tiny</p>
             </div>
         </div>
 
