Fully Functional. TO ADD: More Functions

--- a/index.html
+++ b/index.html
@@ -13,10 +13,21 @@
         <div class="body">
             <div class="content">
                 <div class="controls">
+                    <div class="penBundle">
+                        <div id="pen"></div>
+                        <p id="penLabel">Pen Tool</p>
+                    </div>
+
                     <div class="erase">
                         <div id="eraser"></div>
                         <p id="eraserLabel">Eraser</p>
                     </div>
+
+                    <div class="clearBundle">
+                        <div id="clear"></div>
+                        <p id="clearLabel">Clear</p>
+                    </div>
+
                     <div class="colorBundle">
                         <div class="colorSelector">
                             <input type="color" id="colorPicker" value="#000000">
