added new buttons plus rainbow function

--- a/index.html
+++ b/index.html
@@ -28,6 +28,16 @@
                         <p id="clearLabel">Clear</p>
                     </div>
 
+                    <div class="rainbowBundle">
+                        <div id="rainbow"></div>
+                        <div id="rainbowLabel">Rainbow</div>
+                    </div>
+
+                    <div class="shadowBundle">
+                        <div id="shadow"></div>
+                        <div id="shadowLabel">Shadow</div>
+                    </div>
+
                     <div class="colorBundle">
                         <div class="colorSelector">
                             <input type="color" id="colorPicker" value="#000000">
