--- a/index.html
+++ b/index.html
@@ -58,6 +58,6 @@
             </div>
         </div>
 
-        <div class="footer">The Odin Project</div>
+        <div class="footer">CS50</div>
     </body>
 </html>
